[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/assets/ship_thrust.png" type="Texture" id=1]
[ext_resource path="res://Player/assets/ship_no_thrust.png" type="Texture" id=2]
[ext_resource path="res://Player/assets/ship_full_thrust.png" type="Texture" id=3]
[ext_resource path="res://Player/Player.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "full_thrust",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "no_thrust",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "thrust",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "no_thrust"

[node name="WeaponNode" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="WeaponNode"]
position = Vector2( 0, -25 )

[node name="InvisibilityTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BlinkingTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="InvisibilityTimer" to="." method="_on_InvisibilityTimer_timeout"]
[connection signal="timeout" from="BlinkingTimer" to="." method="_on_BlinkingTimer_timeout"]
